# myMiniClaude

./: .env.example  .gitignore  README.md  miniclaude.db  miniclaude.db-shm  miniclaude.db-wal  pyproject.toml
docs/: adaptive-compression-benchmark.md  architecture.md  bug-log.md  development.md  interview-prep.md  llm_backend.md  memory-design.md  project-highlights.md  self-correction-design.md  temp.md  tools.md
memory/: MEMORY.md  user-from-changsha.md  user-likes-dinosaurs.md
miniclaude/: __init__.py  main.py
miniclaude/agent/: agent_loop.py  compressor.py  context_manager.py  subagent.py  system_prompt.py  task_classifier.py  token_budgeter.py
miniclaude/cli/: markdown_render.py  rich_console.py  textual_app.py
miniclaude/config/: app_config.py
miniclaude/llm/: message_types.py  model_factory.py
miniclaude/mcp/: client.py  tool_adapter.py
miniclaude/memory/: memory_manager.py  memory_tools.py
miniclaude/skills/: __init__.py  executor.py  registry.py
miniclaude/skills/skills/: code-review.md  explain-code.md  summarize.md
miniclaude/storage/: session_store.py  sqlite_store.py
miniclaude/tools/: permission.py  tool_base.py  tool_bash.py  tool_edit.py  tool_glob.py  tool_grep.py  tool_read.py  tool_registry.py  tool_task.py  tool_todo_write.py  tool_web_fetch.py  tool_write.py
skills/job-hunt-copilot/: SKILL.md
tests/: conftest.py  test_adaptive_compression.py  test_config.py  test_tool_bash.py  test_tool_edit.py  test_tool_glob.py  test_tool_grep.py  test_tool_read.py  test_tool_registry.py  test_tool_write.py
